Refactoring to better fit the Clean Architecture
