# docs/swagger.yaml
@@ -1,50 +1,6 @@
 basePath: /
 definitions:
-  handler.errorResponse:
-    properties:
-      message:
-        type: string
-    type: object
-  handler.getAllItemsResponse:
-    properties:
-      data:
-        items:
-          $ref: '#/definitions/todo.TodoItem'
-        type: array
-    type: object
-  handler.getAllListsResponse:
-    properties:
-      data:
-        items:
-          $ref: '#/definitions/todo.TodoList'
-        type: array
-    type: object
-  handler.idResponse:
-    properties:
-      id:
-        type: integer
-    type: object
-  handler.signInInput:
-    properties:
-      password:
-        type: string
-      username:
-        type: string
-    required:
-    - password
-    - username
-    type: object
-  handler.signInResponse:
-    properties:
-      token:
-        type: string
-    type: object
-  handler.statusResponse:
-    properties:
-      status:
-        type: string
-    type: object
-  todo.TodoItem:
+  entity.TodoItem:
     properties:
       description:
         type: string
@@ -58,7 +14,7 @@ definitions:
     - description
     - title
     type: object
-  todo.TodoList:
+  entity.TodoList:
     properties:
       description:
         type: string
@@ -69,7 +25,7 @@ definitions:
     required:
     - title
     type: object
-  todo.User:
+  entity.User:
     properties:
       name:
         type: string
@@ -82,6 +38,50 @@ definitions:
     - password
     - username
     type: object
+  v1.errorResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  v1.getAllItemsResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/entity.TodoItem'
+        type: array
+    type: object
+  v1.getAllListsResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/entity.TodoList'
+        type: array
+    type: object
+  v1.idResponse:
+    properties:
+      id:
+        type: integer
+    type: object
+  v1.signInInput:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  v1.signInResponse:
+    properties:
+      token:
+        type: string
+    type: object
+  v1.statusResponse:
+    properties:
+      status:
+        type: string
+    type: object
 host: localhost:8000
 info:
   contact: {}
@@ -89,7 +89,7 @@ info:
   title: Todo App API
   version: "1.0"
 paths:
-  /api/items/{id}:
+  /api/v1/items/{id}:
     delete:
       consumes:
       - application/json
@@ -107,26 +107,26 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.statusResponse'
+            $ref: '#/definitions/v1.statusResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Delete todo list item
+      summary: Delete list item
       tags:
       - items
     get:
@@ -146,26 +146,26 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/todo.TodoItem'
+            $ref: '#/definitions/entity.TodoItem'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Get todo list item By ID
+      summary: Get list item By ID
       tags:
       - items
     put:
@@ -184,36 +184,36 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/todo.TodoItem'
+          $ref: '#/definitions/entity.TodoItem'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.statusResponse'
+            $ref: '#/definitions/v1.statusResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Update todo list item
+      summary: Update list item
       tags:
       - items
-  /api/lists:
+  /api/v1/lists:
     get:
       consumes:
       - application/json
@@ -225,26 +225,26 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.getAllListsResponse'
+            $ref: '#/definitions/v1.getAllListsResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Get all todo lists
+      summary: Get all lists
       tags:
       - lists
     post:
@@ -258,36 +258,36 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/todo.TodoList'
+          $ref: '#/definitions/entity.TodoList'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.idResponse'
+            $ref: '#/definitions/v1.idResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Create todo list
+      summary: Create list
       tags:
       - lists
-  /api/lists/{id}:
+  /api/v1/lists/{id}:
     delete:
       consumes:
       - application/json
@@ -305,26 +305,26 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.statusResponse'
+            $ref: '#/definitions/v1.statusResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Delete todo list
+      summary: Delete list
       tags:
       - lists
     get:
@@ -344,26 +344,26 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/todo.TodoList'
+            $ref: '#/definitions/entity.TodoList'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Get todo list by ID
+      summary: Get list by ID
       tags:
       - lists
     put:
@@ -382,36 +382,36 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/todo.TodoList'
+          $ref: '#/definitions/entity.TodoList'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.statusResponse'
+            $ref: '#/definitions/v1.statusResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Update todo list
+      summary: Update list
       tags:
       - lists
-  /api/lists/{id}/items:
+  /api/v1/lists/{id}/items:
     get:
       consumes:
       - application/json
@@ -429,26 +429,26 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.getAllItemsResponse'
+            $ref: '#/definitions/v1.getAllItemsResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Get All todo list item
+      summary: Get All list item
       tags:
       - items
     post:
@@ -467,33 +467,33 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/todo.TodoItem'
+          $ref: '#/definitions/entity.TodoItem'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.idResponse'
+            $ref: '#/definitions/v1.idResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Create todo item
+      summary: Create item
       tags:
       - items
   /auth/sign-in:
@@ -508,26 +508,26 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/handler.signInInput'
+          $ref: '#/definitions/v1.signInInput'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.signInResponse'
+            $ref: '#/definitions/v1.signInResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       summary: SignIn
       tags:
       - auth
@@ -543,26 +543,26 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/todo.User'
+          $ref: '#/definitions/entity.User'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.idResponse'
+            $ref: '#/definitions/v1.idResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
         default:
           description: ""
           schema:
-            $ref: '#/definitions/handler.errorResponse'
+            $ref: '#/definitions/v1.errorResponse'
       summary: SignUp
       tags:
       - auth
